crates/bonsaidb-macros/tests/ui/view/invalid_attribute.stderr
error: supported fields are `collection`, `key`, `name`, `value`, `core` and `serialization`
 --> tests/ui/view/invalid_attribute.rs:4:21
  |
4 | #[view(name = "hi", "hi")]
  |                     ^^^^

error: supported fields are `collection`, `key`, `name`, `value`, `core` and `serialization`
 --> tests/ui/view/invalid_attribute.rs:8:21
  |
8 | #[view(name = "hi", authority = "hello", "hi")]
  |                     ^^^^^^^^^
